[package]
name = "dl_redirector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dl_receiver"
path = "src/receiver.rs"

[[bin]]
name = "dL_redirector"
path = "src/redirector.rs"

[dependencies]
reqwest = { version = "~0.12", features = ["stream"] }
tokio = { version = "1.38.0", features = [ "fs", "rt", "net", "macros" ] }
futures-util = "~0.3"

anyhow = "1.0.86"
bytesize = "~1.3"

clap = { version = "~4.5", features = ["derive"] }